Re-organize compaction APIs